@@ -124,4 +124,17 @@ public abstract class AbstractConsoleHandler extends AbstractJMXHandler {
         return valueParser;
     }
 
+    /** Check for an empty string */
+    protected static boolean isEmpty(final String string) {
+        if (null == string) {
+            return true;
+        }
+        final int len = string.length();
+        boolean isWhitespace = true;
+        for (int i = 0; isWhitespace && i < len; i++) {
+            isWhitespace = Character.isWhitespace(string.charAt(i));
+        }
+        return isWhitespace;
+    }
+
 }
